--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,140 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
-   <title>PUT YOUR NAME HERE (PUT YOUR GIHUB USERNAME HERE) | Assignment 3</title>
+   <title>Harry Zhang</title>
    <link href="css/reset.css" rel="stylesheet"><!-- DO NOT EDIT THIS LINE. -->
    <link href="css/style.css" rel="stylesheet">
+   <link rel="stylesheet" href="css/nav.css">
+   <link rel="stylesheet" href="css/links.css">
+   <link href="https://fonts.googleapis.com/css?family=Assistant:400,700,800&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+   <!-- added two fonts from google font for the headings and body paragraphs -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous">
+   <!-- added icons from fontawesome for the header and footer sections-->
+
 </head>
 <body>
+<header>
+   <!-- <div class="HeaderIcons">
+   <p class="SocialMedia">
+      <span class="AlignLeft"> <i class="fas fa-bars"></i> </span>
+      <a href="https://www.facebook.com/DawnofMidi" class="fab fa-facebook-square"></a>&emsp;
+      <a href="https://twitter.com/DawnofMidi" class="fab fa-twitter-square"></a>&emsp;
+      <a href="https://www.instagram.com/dawnofmidi/" class="fab fa-instagram"></a>&emsp;
+      <a href="https://soundcloud.com/dawn-of-midi" class="fab fa-soundcloud"></a>&emsp;
+      <a href="https://vimeo.com/dawnofmidi" class="fab fa-vimeo-square"></a>&emsp;
+   </p>
+   </div> -->
+      <h1>Good Design is ... </h1>
+      <p class="Button">
+         <a href="#Nav" class="fas fa-chevron-down"></a>
+      </p>
+</header>
+
+<main>
+   <div class="Menu">
+   <section id="Nav">
+      <nav>
+         <a href="#Yellow"><img src="./img/yellowstroke.png" height="50" width="400" alt="Link to Principle One"></a><br>
+         <a href="#Orange"><img src="./img/orangestroke.png" height="50" alt="Link to Principle Two"></a><br>
+         <a href="#Red"><img src="./img/redstroke.png" height="50" alt="Link to Principle Three"></a><br>
+         <a href="#Pink"><img src="./img/pinkstroke.png" height="50" alt="Link to Principle Four"></a><br>
+         <a href="#Purple"><img src="./img/purplestroke.png" height="50" alt="Link to Principle Five"></a><br>
+         <a href="#Grey"><img src="./img/greystroke.png" height="50" alt="Link to Principle Six"></a><br>
+         <a href="#Blue"><img src="./img/bluestroke.png" height="50" alt="Link to Principle Seven"></a><br>
+         <a href="#LightBlue"><img src="./img/lightbluestroke.png" height="50" alt="Link to Principle Eight"></a><br>
+         <a href="#Green"><img src="./img/greenstroke.png" height="50" alt="Link to Principle Nine"></a><br>
+         <a href="#LightGreen"><img src="./img/lightgreenstroke.png" height="50" alt="Link to Principle Ten"></a>
+      </nav>
+   </section>
+   </div>
+<hr>
+   <div class="Section1">
+   <section id="Yellow">
+      <p>
+      <span class="italic">Is innovative.</span> The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.
+      </p>
+   </section>
+
+      <div class="Section2">
+      <section id="Orange">
+         <p>
+         <span class="italic">Makes a product useful.</span> A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.
+         </p>
+      </section>
+
+         <div class="Section3">
+         <section id="Red">
+            <p>
+            <span class="italic">Is aesthetic.</span> The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.
+            </p>
+         </section>
+
+            <div class="Section4">
+            <section id="Pink">
+               <p>
+               <span class="italic">Makes a product understandable.</span> It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.
+               </p>
+            </section>
+
+               <div class="Section5">
+               <section id="Purple">
+                  <p>
+                  <span class="italic">Is unobtrusive.</span> Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.
+                  </p>
+               </section>
+
+                  <div class="Section6">
+                  <section id="Grey">
+                     <p>
+                     <span class="italic">Is honest.</span> It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.
+                     </p>
+                  </section>
+
+                     <div class="Section7">
+                     <section id="Blue">
+                        <p>
+                        <span class="italic">Is long-lasting.</span> It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
+                        </p>
+                     </section>
+
+                        <div class="Section8">
+                        <section id="LightBlue">
+                           <p>
+                           <span class="italic">Is thorough down to the last detail.</span> Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.
+                           <p>
+                        </section>
+
+                           <div class="Section9">
+                           <section id="LightGreen">
+                              <p>
+                              <span class="italic">Is environmentally friendly.</span> Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.
+                              </p>
+                           </section>
+
+                              <div class="Section10">
+                              <section id="Green">
+                                 <p>
+                                 <span class="italic">Is as little design as possible.</span> Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.
+                                 </P>
+                              </section>
+
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</main>
+
+by Dieter Rams
+
+Good design…
+
+
 </body>
 </html>
