--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
    <link href="css/style.css" rel="stylesheet">
    <link rel="stylesheet" href="css/nav.css">
    <link rel="stylesheet" href="css/links.css">
+   <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Assistant:400,700,800&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
    <!-- added two fonts from google font for the headings and body paragraphs -->
@@ -27,98 +28,129 @@
       <a href="https://vimeo.com/dawnofmidi" class="fab fa-vimeo-square"></a>&emsp;
    </p>
    </div> -->
-      <h1>Good Design is ... </h1>
+      <h1>Good Design ... </h1>
       <p class="Button">
          <a href="#Nav" class="fas fa-chevron-down"></a>
       </p>
 </header>
 
 <main>
-   <div class="Menu">
    <section id="Nav">
+   <div class="Menu">
       <nav>
-         <a href="#Yellow"><img src="./img/yellowstroke.png" height="50" width="400" alt="Link to Principle One"></a><br>
-         <a href="#Orange"><img src="./img/orangestroke.png" height="50" alt="Link to Principle Two"></a><br>
-         <a href="#Red"><img src="./img/redstroke.png" height="50" alt="Link to Principle Three"></a><br>
-         <a href="#Pink"><img src="./img/pinkstroke.png" height="50" alt="Link to Principle Four"></a><br>
-         <a href="#Purple"><img src="./img/purplestroke.png" height="50" alt="Link to Principle Five"></a><br>
-         <a href="#Grey"><img src="./img/greystroke.png" height="50" alt="Link to Principle Six"></a><br>
-         <a href="#Blue"><img src="./img/bluestroke.png" height="50" alt="Link to Principle Seven"></a><br>
-         <a href="#LightBlue"><img src="./img/lightbluestroke.png" height="50" alt="Link to Principle Eight"></a><br>
-         <a href="#Green"><img src="./img/greenstroke.png" height="50" alt="Link to Principle Nine"></a><br>
-         <a href="#LightGreen"><img src="./img/lightgreenstroke.png" height="50" alt="Link to Principle Ten"></a>
+         <a href="#Yellow" class="hvr-grow"><img src="./img/yellowstroke.png" height="60" alt="Link to Principle One"></a><br>
+         <a href="#Orange" class="hvr-grow"><img src="./img/orangestroke.png" height="60" alt="Link to Principle Two"></a><br>
+         <a href="#Red" class="hvr-grow"><img src="./img/redstroke.png" height="60" alt="Link to Principle Three"></a><br>
+         <a href="#Pink" class="hvr-grow"><img src="./img/pinkstroke.png" height="60" alt="Link to Principle Four"></a><br>
+         <a href="#Purple" class="hvr-grow"><img src="./img/purplestroke.png" height="60" alt="Link to Principle Five"></a><br>
+         <a href="#Grey" class="hvr-grow"><img src="./img/lightgreystroke.png" height="60" alt="Link to Principle Six"></a><br>
+         <a href="#Blue" class="hvr-grow"><img src="./img/bluestroke.png" height="60" alt="Link to Principle Seven"></a><br>
+         <a href="#LightBlue" class="hvr-grow"><img src="./img/lightbluestroke.png" height="60" alt="Link to Principle Eight"></a><br>
+         <a href="#LightGreen" class="hvr-grow"><img src="./img/lightgreenstroke.png" height="60" alt="Link to Principle Ten"></a><br>
+         <a href="#Green" class="hvr-grow"><img src="./img/greenstroke.png" height="60" alt="Link to Principle Nine"></a>
       </nav>
-   </section>
    </div>
-<hr>
+   </section>
+
    <div class="Section1">
    <section id="Yellow">
-      <p>
-      <span class="italic">Is innovative.</span> The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.
-      </p>
+
+   <div class="SectionText">
+      <p style="float: left;">
+         <img src="./img/yellowdrop.png" alt="yellowdrop" height="100" width="100" border="0"></p>
+      <p style="float: right;">
+         <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/139/crops/850.jpg" alt="radio" width="250" border="0"></p>
+      <p class="in-betweentext">
+         <span class="Yellow">Good design is innovative.</span>&emsp; The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</p>
+   </div>
    </section>
 
       <div class="Section2">
       <section id="Orange">
-         <p>
-         <span class="italic">Makes a product useful.</span> A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.
-         </p>
+      <div class="SectionText">
+         <p style="float: left;">
+            <img src="./img/orangedrop.png" alt="orangedrop" height="100" width="100" border="0"></p>
+         <p style="float: right;">
+            <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/140/crops/849.jpg" alt="radio" width="250" border="0">
+         <p class="in-betweentext">
+            <span class="Orange">Good design makes a product useful.</span>&emsp; A product is bought to be used. It has to satisfy not only functional, but also psychological and aesthetic criteria. Good design emphasizes the usefulness of a product whilst disregarding anything that could detract from it.</p>
+      </div>
       </section>
 
          <div class="Section3">
          <section id="Red">
-            <p>
-            <span class="italic">Is aesthetic.</span> The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.
+         <div class="SectionText">
+            <p style="float: left;">
+               <img src="./img/reddrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+            <p style="float: right;">
+               <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/141/crops/1000.jpg" alt="radio" width="250" border="0">
+            <p class="in-betweentext">
+               <span class="Red">Is aesthetic.</span> The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.
             </p>
+         </div>
          </section>
 
             <div class="Section4">
             <section id="Pink">
+            <div class="SectionText">
                <p>
-               <span class="italic">Makes a product understandable.</span> It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.
+               <span class="Shadowsfont">Makes a product understandable.</span> It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.
                </p>
+            </div>
             </section>
 
                <div class="Section5">
                <section id="Purple">
+               <div class="SectionText">
                   <p>
-                  <span class="italic">Is unobtrusive.</span> Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.
+                  <span class="Shadowsfont">Is unobtrusive.</span> Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.
                   </p>
+               </div>
                </section>
 
                   <div class="Section6">
                   <section id="Grey">
+                  <div class="SectionText">
                      <p>
-                     <span class="italic">Is honest.</span> It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.
+                     <span class="Shadowsfont">Is honest.</span> It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.
                      </p>
+                  </div>
                   </section>
 
                      <div class="Section7">
                      <section id="Blue">
+                     <div class="SectionText">
                         <p>
-                        <span class="italic">Is long-lasting.</span> It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
+                        <span class="Shadowsfont">Is long-lasting.</span> It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
                         </p>
+                     </div>
                      </section>
 
                         <div class="Section8">
                         <section id="LightBlue">
+                        <div class="SectionText">
                            <p>
-                           <span class="italic">Is thorough down to the last detail.</span> Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.
+                           <span class="Shadowsfont">Is thorough down to the last detail.</span> Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.
                            <p>
+                        </div>
                         </section>
 
                            <div class="Section9">
                            <section id="LightGreen">
+                           <div class="SectionText">
                               <p>
-                              <span class="italic">Is environmentally friendly.</span> Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.
+                              <span class="Shadowsfont">Is environmentally friendly.</span> Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.
                               </p>
+                           </div>
                            </section>
 
                               <div class="Section10">
                               <section id="Green">
+                              <div class="SectionText">
                                  <p>
-                                 <span class="italic">Is as little design as possible.</span> Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.
+                                 <span class="Shadowsfont">Good design is as little design as possible.</span> Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.
                                  </P>
+                              </div>
                               </section>
 
                               </div>
@@ -131,12 +163,21 @@
          </div>
       </div>
    </div>
+   <!-- button to go back to content -->
 </main>
 
-by Dieter Rams
-
-Good design…
-
-
+<footer>
+   <section id="footer">
+   <div class="footerimage">
+      <img src="./img/DieterRams.png" width="300" alt="">
+   </div>
+      <p class="SocialMedia">
+         <a href="https://www.facebook.com/Dieter.Rams/" class="fab fa-facebook-square"></a>&emsp;
+         <a href="https://twitter.com/dieterrams?lang=en" class="fab fa-twitter-square"></a>&emsp;
+         <a href="https://www.instagram.com/dieter_rams_design/?hl=en" class="fab fa-instagram"></a>&emsp;
+      </p>
+      <p><span class="footerText">©2019 RISD Web Design Harry Zhang's Assignment 3</span></p>
+   </section>
+</footer>
 </body>
 </html>
