--- a/site/index.html
+++ b/site/index.html
@@ -54,7 +54,6 @@
 
    <div class="Section1">
    <section id="Yellow">
-
    <div class="SectionText">
       <p style="float: left;">
          <img src="./img/yellowdrop.png" alt="yellowdrop" height="100" width="100" border="0"></p>
@@ -85,7 +84,7 @@
             <p style="float: right;">
                <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/141/crops/1000.jpg" alt="radio" width="250" border="0">
             <p class="in-betweentext">
-               <span class="Red">Is aesthetic.</span> The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.
+               <span class="Red">Good design is aesthetic.</span>&emsp; The aesthetic quality of a product is integral to its usefulness because products are used every day and have an effect on people and their well-being. Only well-executed objects can be beautiful.
             </p>
          </div>
          </section>
@@ -93,8 +92,12 @@
             <div class="Section4">
             <section id="Pink">
             <div class="SectionText">
-               <p>
-               <span class="Shadowsfont">Makes a product understandable.</span> It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.
+               <p style="float: left;">
+                  <img src="./img/pinkdrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+               <p style="float: right;">
+                  <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/142/crops/994.jpg" alt="radio" width="250" border="0">
+               <p class="in-betweentext">
+                  <span class="Pink">Good design makes a product understandable.</span>&emsp; It clarifies the product’s structure. Better still, it can make the product clearly express its function by making use of the user’s intuition. At best, it is self-explanatory.
                </p>
             </div>
             </section>
@@ -102,8 +105,12 @@
                <div class="Section5">
                <section id="Purple">
                <div class="SectionText">
-                  <p>
-                  <span class="Shadowsfont">Is unobtrusive.</span> Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.
+                  <p style="float: left;">
+                     <img src="./img/purpledrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+                  <p style="float: right;">
+                     <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/143/crops/849.jpg" alt="radio" width="250" border="0">
+                  <p class="in-betweentext">
+                     <span class="Purple">Good design is unobtrusive.</span>&emsp; Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user’s self-expression.
                   </p>
                </div>
                </section>
@@ -111,8 +118,12 @@
                   <div class="Section6">
                   <section id="Grey">
                   <div class="SectionText">
-                     <p>
-                     <span class="Shadowsfont">Is honest.</span> It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.
+                     <p style="float: left;">
+                        <img src="./img/greydrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+                     <p style="float: right;">
+                        <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/144/crops/850.jpg" alt="radio" width="250" border="0">
+                     <p class="in-betweentext">
+                        <span class="Grey">Good design is honest.</span>&emsp; It does not make a product appear more innovative, powerful or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.
                      </p>
                   </div>
                   </section>
@@ -120,8 +131,12 @@
                      <div class="Section7">
                      <section id="Blue">
                      <div class="SectionText">
-                        <p>
-                        <span class="Shadowsfont">Is long-lasting.</span> It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
+                        <p style="float: left;">
+                           <img src="./img/bluedrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+                        <p style="float: right;">
+                           <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/297/crops/350.jpg" alt="radio" width="250" border="0">
+                        <p class="in-betweentext">
+                           <span class="Blue">Good design is long-lasting.</span>&emsp; It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years — even in today’s throwaway society.
                         </p>
                      </div>
                      </section>
@@ -129,8 +144,12 @@
                         <div class="Section8">
                         <section id="LightBlue">
                         <div class="SectionText">
-                           <p>
-                           <span class="Shadowsfont">Is thorough down to the last detail.</span> Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.
+                           <p style="float: left;">
+                              <img src="./img/lightbluedrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+                           <p style="float: right;">
+                              <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/145/crops/850.jpg" alt="radio" width="250" border="0">
+                           <p class="in-betweentext">
+                              <span class="LightBlue">Good design is thorough down to the last detail.</span>&emsp; Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the consumer.
                            <p>
                         </div>
                         </section>
@@ -138,8 +157,12 @@
                            <div class="Section9">
                            <section id="LightGreen">
                            <div class="SectionText">
-                              <p>
-                              <span class="Shadowsfont">Is environmentally friendly.</span> Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.
+                              <p style="float: left;">
+                                 <img src="./img/lightgreendrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+                              <p style="float: right;">
+                                 <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/148/crops/850.jpg" alt="radio" width="250" border="0">
+                              <p class="in-betweentext">
+                                 <span class="LightGreen">Good design is environmentally friendly.</span>&emsp; Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.
                               </p>
                            </div>
                            </section>
@@ -147,8 +170,12 @@
                               <div class="Section10">
                               <section id="Green">
                               <div class="SectionText">
-                                 <p>
-                                 <span class="Shadowsfont">Good design is as little design as possible.</span> Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.
+                                 <p style="float: left;">
+                                    <img src="./img/greendrop.png" alt="reddrop" height="100" width="100" border="0"></p>
+                                 <p style="float: right;">
+                                    <img src="https://d2lsod3xpjaepj.cloudfront.net/files/assets/1000/149/crops/850.jpg" alt="radio" width="250" border="0">
+                                 <p class="in-betweentext">
+                                    <span class="Green">Good design is as little design as possible.</span>&emsp; Less, but better — because it concentrates on the essential aspects, and the products are not burdened with non-essentials. Back to purity, back to simplicity.
                                  </P>
                               </div>
                               </section>
@@ -163,20 +190,27 @@
          </div>
       </div>
    </div>
-   <!-- button to go back to content -->
 </main>
 
 <footer>
    <section id="footer">
+         <p class="BottomButton">
+         <a href="#Nav" class="fas fa-chevron-up"></a>
+         </p>
    <div class="footerimage">
-      <img src="./img/DieterRams.png" width="300" alt="">
-   </div>
-      <p class="SocialMedia">
+      <p style="float: left;">
+         <img src="./img/DieterRams.png" width="300" alt="">
+         </p>
+      <blockquote cite="https://www.azquotes.com/author/22864-Dieter_Rams">
+         “You cannot understand good design if you do not understand people; design is made for people.”
+      </blockquote>
+      <p style="float: right;" class="SocialMedia">
          <a href="https://www.facebook.com/Dieter.Rams/" class="fab fa-facebook-square"></a>&emsp;
          <a href="https://twitter.com/dieterrams?lang=en" class="fab fa-twitter-square"></a>&emsp;
-         <a href="https://www.instagram.com/dieter_rams_design/?hl=en" class="fab fa-instagram"></a>&emsp;
-      </p>
-      <p><span class="footerText">©2019 RISD Web Design Harry Zhang's Assignment 3</span></p>
+         <a href="https://www.instagram.com/dieter_rams_design/?hl=en" class="fab fa-instagram"></a>&emsp;</p>
+   </div>
+
+      <!-- <p><span class="footerText">©2019 RISD Web Design Harry Zhang's Assignment 3</span></p> -->
    </section>
 </footer>
 </body>
